[gd_scene load_steps=2 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 1 )

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 343.0
margin_top = 211.0
margin_right = 668.0
margin_bottom = 338.0
text = "Click to Ping"

[node name="HTTPRequest" type="HTTPRequest" parent="CanvasLayer"]

[connection signal="pressed" from="CanvasLayer/Button" to="CanvasLayer" method="_on_Button_pressed"]
[connection signal="request_completed" from="CanvasLayer/HTTPRequest" to="CanvasLayer" method="_on_request_completed"]
